samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/good/pass-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pass-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert # annotation appgw-ssl-certificate exists for Azure Gateway Ingress Controller
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
