samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/good/pass-nginx-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pass-nginx-host-2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: secret1 # tls exists
  rules:
  - host: test.com # declare host in rules
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
