samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/good/pass-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pass-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # force-ssl-redirect=true
spec:
  tls:
    - secretName: secret1 # tls exists
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
