samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/good/pass-unkown-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pass-unkown-controller
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
